testsuite/gnatprove/tests/Q725-013__late_primitive_equality/test.out
test.adb:14:13: error: equality operator must be declared before type "R" is frozen (RM 4.5.2 (9.8)) (Ada 2012)
gnatprove: error during flow analysis and proof
test.gpr: error: [Ada Global_Gen] test.adb (test.gpr) failed with status 5
